// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieList component MovieList empty snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="slick-slider slick-initialized"
      >
        <div
          class="slick-list"
        >
          <div
            class="slick-track"
            style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
          />
        </div>
      </div>
      <div
        class="slick-slider slick-initialized"
      >
        <div
          class="slick-list"
        >
          <div
            class="slick-track"
            style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="slick-slider slick-initialized"
    >
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        />
      </div>
    </div>
    <div
      class="slick-slider slick-initialized"
    >
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MovieList component MovieList snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="slick-slider slick-initialized"
      >
        <div
          class="slick-list"
        >
          <div
            class="slick-track"
            style="width: -66px; opacity: 1; transform: translate3d(0px, 0px, 0px);"
          >
            <div
              aria-hidden="false"
              class="slick-slide slick-active slick-center slick-current"
              data-index="0"
              style="outline: none; width: -33px;"
              tabindex="-1"
            >
              <div>
                <div
                  class="mda rowChild f-flex justify-content-start m-3"
                  style="width: 100%; display: inline-block;"
                  tabindex="-1"
                >
                  <div
                    class="text"
                  >
                    test123
                  </div>
                  <img
                    alt="no"
                    class="img"
                    src="test"
                  />
                  <div
                    class="bottom"
                  >
                    <a
                      href="/test"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-default btnDesc"
                        type="button"
                      >
                        <span>
                          Go to movie
                        </span>
                      </button>
                    </a>
                    <button
                      class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-primary btnPlus"
                      type="button"
                    >
                      <span>
                        +
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden="false"
              class="slick-slide slick-active"
              data-index="1"
              style="outline: none; width: -33px;"
              tabindex="-1"
            >
              <div>
                <div
                  class="mda rowChild f-flex justify-content-start m-3"
                  style="width: 100%; display: inline-block;"
                  tabindex="-1"
                >
                  <div
                    class="text"
                  >
                    test2
                  </div>
                  <img
                    alt="no"
                    class="img"
                    src="test2"
                  />
                  <div
                    class="bottom"
                  >
                    <a
                      href="/test2"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-default btnDesc"
                        type="button"
                      >
                        <span>
                          Go to movie
                        </span>
                      </button>
                    </a>
                    <button
                      class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-primary btnPlus"
                      type="button"
                    >
                      <span>
                        +
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="slick-slide slick-center slick-cloned"
              data-index="2"
              style="width: -33px;"
              tabindex="-1"
            >
              <div>
                <div
                  class="mda rowChild f-flex justify-content-start m-3"
                  style="width: 100%; display: inline-block;"
                  tabindex="-1"
                >
                  <div
                    class="text"
                  >
                    test123
                  </div>
                  <img
                    alt="no"
                    class="img"
                    src="test"
                  />
                  <div
                    class="bottom"
                  >
                    <a
                      href="/test"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-default btnDesc"
                        type="button"
                      >
                        <span>
                          Go to movie
                        </span>
                      </button>
                    </a>
                    <button
                      class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-primary btnPlus"
                      type="button"
                    >
                      <span>
                        +
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="slick-slide slick-cloned"
              data-index="3"
              style="width: -33px;"
              tabindex="-1"
            >
              <div>
                <div
                  class="mda rowChild f-flex justify-content-start m-3"
                  style="width: 100%; display: inline-block;"
                  tabindex="-1"
                >
                  <div
                    class="text"
                  >
                    test2
                  </div>
                  <img
                    alt="no"
                    class="img"
                    src="test2"
                  />
                  <div
                    class="bottom"
                  >
                    <a
                      href="/test2"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-default btnDesc"
                        type="button"
                      >
                        <span>
                          Go to movie
                        </span>
                      </button>
                    </a>
                    <button
                      class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-primary btnPlus"
                      type="button"
                    >
                      <span>
                        +
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="slick-slider slick-initialized"
      >
        <div
          class="slick-list"
        >
          <div
            class="slick-track"
            style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="slick-slider slick-initialized"
    >
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="width: -66px; opacity: 1; transform: translate3d(0px, 0px, 0px);"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-center slick-current"
            data-index="0"
            style="outline: none; width: -33px;"
            tabindex="-1"
          >
            <div>
              <div
                class="mda rowChild f-flex justify-content-start m-3"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <div
                  class="text"
                >
                  test123
                </div>
                <img
                  alt="no"
                  class="img"
                  src="test"
                />
                <div
                  class="bottom"
                >
                  <a
                    href="/test"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-default btnDesc"
                      type="button"
                    >
                      <span>
                        Go to movie
                      </span>
                    </button>
                  </a>
                  <button
                    class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-primary btnPlus"
                    type="button"
                  >
                    <span>
                      +
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="1"
            style="outline: none; width: -33px;"
            tabindex="-1"
          >
            <div>
              <div
                class="mda rowChild f-flex justify-content-start m-3"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <div
                  class="text"
                >
                  test2
                </div>
                <img
                  alt="no"
                  class="img"
                  src="test2"
                />
                <div
                  class="bottom"
                >
                  <a
                    href="/test2"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-default btnDesc"
                      type="button"
                    >
                      <span>
                        Go to movie
                      </span>
                    </button>
                  </a>
                  <button
                    class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-primary btnPlus"
                    type="button"
                  >
                    <span>
                      +
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide slick-center slick-cloned"
            data-index="2"
            style="width: -33px;"
            tabindex="-1"
          >
            <div>
              <div
                class="mda rowChild f-flex justify-content-start m-3"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <div
                  class="text"
                >
                  test123
                </div>
                <img
                  alt="no"
                  class="img"
                  src="test"
                />
                <div
                  class="bottom"
                >
                  <a
                    href="/test"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-default btnDesc"
                      type="button"
                    >
                      <span>
                        Go to movie
                      </span>
                    </button>
                  </a>
                  <button
                    class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-primary btnPlus"
                    type="button"
                  >
                    <span>
                      +
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide slick-cloned"
            data-index="3"
            style="width: -33px;"
            tabindex="-1"
          >
            <div>
              <div
                class="mda rowChild f-flex justify-content-start m-3"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <div
                  class="text"
                >
                  test2
                </div>
                <img
                  alt="no"
                  class="img"
                  src="test2"
                />
                <div
                  class="bottom"
                >
                  <a
                    href="/test2"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-default btnDesc"
                      type="button"
                    >
                      <span>
                        Go to movie
                      </span>
                    </button>
                  </a>
                  <button
                    class="ant-btn css-dev-only-do-not-override-i0102m ant-btn-primary btnPlus"
                    type="button"
                  >
                    <span>
                      +
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="slick-slider slick-initialized"
    >
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
